Corrections in Thesis

--- a/Thesis/diagrams/temptate.tex
+++ b/Thesis/diagrams/temptate.tex
@@ -11,6 +11,11 @@
 \usetikzlibrary{ decorations.markings}
 \usetikzlibrary {decorations.shapes}
 
+\usetikzlibrary {shapes.arrows}
+\tikzset{
+visible on/.style={ }
+}
+
 \usepackage{xcolor}
 
 \definecolor{C0}{HTML}{1f77b4}
