--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -30,6 +30,23 @@
 	file = {Vandebril et al. - 2007 - Matrix Computations and Semiseparable Matrices Li.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/N72WNGWM/Vandebril et al. - 2007 - Matrix Computations and Semiseparable Matrices Li.pdf:application/pdf},
 }
 
+@article{fiedler_completing_1986,
+	title = {Completing a matrix when certain entries of its inverse are specified},
+	volume = {74},
+	issn = {0024-3795},
+	url = {https://www.sciencedirect.com/science/article/pii/0024379586901254},
+	doi = {10.1016/0024-3795(86)90125-4},
+	abstract = {Suppose A = A11A12A21A22 is an n×n matrix, where A11 has order p×q. If A is nonsingular, let A-1 have the transposed partitioning B11B12B21B22 First, we show that the nullities of A11 and B22 are equal. The remainder of our paper deals with the following completion problem. Suppose m1,m2,n1,n2 are nonnegative integers such that m1 + m2 = n1 + n2 = n {\textgreater} 0.},
+	pages = {225--237},
+	journaltitle = {Linear Algebra and its Applications},
+	shortjournal = {Linear Algebra and its Applications},
+	author = {Fiedler, Miroslav and Markham, Thomas L.},
+	urldate = {2022-06-27},
+	date = {1986-02-01},
+	langid = {english},
+	file = {Fiedler und Markham - 1986 - Completing a matrix when certain entries of its in.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/C4BU6YQC/Fiedler und Markham - 1986 - Completing a matrix when certain entries of its in.pdf:application/pdf;ScienceDirect Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/M6L9RVN9/0024379586901254.html:text/html},
+}
+
 @thesis{grasedyck_theorie_2001,
 	title = {Theorie und Anwendungen Hierarchischer Matrizen},
 	abstract = {The modeling of physical properties often leads to the task of solving partial differential equations or integral equations. The results of some discretisation and linearisation process are matrix equations or linear systems of equations with special features. In the case of partial differential equations one exploits the local character of the differentiation by using some finite element method or finite difference scheme and gains a sparse system matrix. In the case of (nonlocal) integral operators low rank approximations seem to be the method of choice. These are either given explicitly by some multipole method or panel clustering technique or implicitly by rank revealing decompositions. Both types of matrices can be represented as so-called H-matrices. In this thesis we investigate algorithms that perform the addition, multiplication and inversion of H-matrices approximately. Under moderate assumptions the complexity of these new arithmetics is almost linear (linear up to logarithmic terms of order 1 to 3). The arithmetic operations can be performed adaptively, that is up to some given accuracy epsilon the relative error of the operations is zero. The question arises under which circumstances the inverse of an H-matrix can be approximated by an H-matrix. For the techniques used in this thesis we need very restrictive assumptions, but the numerical examples in the last part indicate that the approximability does not depend on these assumptions.},
